Fix: app text and styling changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="col-12">
                     <div>
                         <h1 class="title">All About Autism<span>
-                                <img class="logo-img" src="assets/images/infinity_logo.png" alt="Autism infinity Logo"
+                                <img class="logo-img" src="assets/images/infinity_logo_mod.png" alt="Autism infinity Logo"
                                     aria-label="Multicoloured infinity figure of 8 logo."></span></h1>
                     </div>
                 </div>
@@ -66,16 +66,37 @@
                                 More than one in 100 people are on the autism spectrum and there are around 700,000
                                 autistic adults and children in the UK.
                             </p>
-                            <br>
                             <p>
                                 It's impossible to estimate how many undiagnosed people there are but it's clearly
                                 substantial as there are many cases of diagnoses later in life.
                             </p>
-                            <br>
+                            <ul>
+                                <li>
+                                    The country with the highest rate of diagnosed autism in the world is Qatar.
+                                </li>
+                                <li>
+                                    And the country with the lowest rate is France.
+                                </li>
+                                <li>
+                                    Around 4 times as many boys are diagnosed with autism as girls.
+                                </li>
+                                <li>
+                                    The rate of autism in the U.S. went from 1 in 150 in 2000 to 1 in 100 in 2022.
+                                </li>
+                                <li>
+                                    The rate of autism in the U.S. for children is 1 in 36 (1 in 150 in 2000).
+                                </li>
+                                <li>
+                                    28% of autistics are left-handed. This figure is 10% in the general population.
+                                </li>
+                                <li>
+                                    The percentage of left-handed people in a population is roughly the same all over the world.
+                                </li>
+                            </ul>
                             <p>
                                 Autism is a spectrum condition and affects people in different ways. Like all people,
                                 autistic people have their own strengths and weaknesses.
-                                The definition of Autism has changed over time and continues to change.
+                                The definition of autism has changed over time and continues to change.
                             </p>
                             <br>
                         </div>
@@ -120,10 +141,10 @@
                                 <p>
                                     Autism is a spectrum condition and affects people in different ways. Like all
                                     people, autistic people have their own strengths and weaknesses.
-                                    The definition of Autism has changed over time and continues to change.
+                                    The definition of autism has changed over time and continues to change.
                                 </p>
                                 <p class="center-content">
-                                    <img class="img-reduce img-responsive" src="assets/images/aut-modified.png"
+                                    <img class="img-reduce img-responsive" src="assets/images/aut.jpg"
                                         alt="asd spectrum"
                                         aria-label="autism spectrum disorder spectrum rainbow with categories.">
                                     <p>
@@ -132,7 +153,7 @@
                                         described his classic autistic syndrome.
                                         Since then, the results of research and clinical work have helped us learn more
                                         about autism.
-                                        Regardless of this recent naming of the condition, its clear that Autism has
+                                        Regardless of this recent naming of the condition, its clear that autism has
                                         been with us for millenia...
                                     </p>
                                     <p>
@@ -229,12 +250,12 @@
                                             alt="batman symbol" aria-label="batman symbol in autism colors.">
                                     </p>
                                     <p>
-                                        The High and Low Functioning labels were intended to separate out Autistics with
+                                        The High and Low Functioning labels were intended to separate out autistics with
                                         an IQ under 70. Now though, societally functioning labels are used by people
                                         and professionals to designate one’s ability to function in society. but...
                                     </p>
                                     <p>
-                                        Its complete nonsense, all Autistic people are individuals.
+                                        Its complete nonsense, all autistic people are individuals.
                                     </p>
                                 </div>
                             </div>
@@ -261,8 +282,8 @@
                                             aria-label="montage of 3 famous autistic peopele. einstenin jobs.">
                                     </p>
                                     <p>
-                                        Autism is Autism. Though certain people have better support structures and
-                                        coping strategies than others, the underlying Autism is the same.
+                                        'Autism is Autism'. Though certain people have better support structures and
+                                        coping strategies than others, the underlying autism is the same.
                                         It just affects different people differently, often with a co-morbid condition
                                         exacerbating the problem.
                                     </p>
@@ -282,7 +303,7 @@
                                     <p>
                                         There are no separate High Functioning and Low Functioning people. Asperger’s
                                         and Autism are indistinguishable from each other, and so are the same.
-                                        There is no mild Autism, or severe Autism; there is only Autism and the ability
+                                        There is no mild autism, or severe autism; there is only autism and the ability
                                         of the individual to prevent societal norms from crippling them.
                                     </p>
                                     <p class="center-content">
@@ -294,7 +315,7 @@
                                         The vagueness of all this, and the misunderstanding and myths around it, just
                                         serves to confuse Neurotypicals as well as pre- and newly diagnosed people.
                                         It puts a barrier up between all of these groups and already established
-                                        Autistics.
+                                        autistics.
                                     </p>
                                 </div>
                             </div>
@@ -313,7 +334,7 @@
                                         Autistic person..
                                     </p>
                                     <p>
-                                        Then, as the saying goes, you've met <strong>ONE</strong> Autistic person. The
+                                        Then, as the saying goes, you've met <strong>ONE</strong> autistic person. The
                                         diagnosis means that there is neurodiversity
                                         but the scale, nature and breadth differ enormously.
                                     </p>
@@ -376,7 +397,7 @@
                                         Stimming or self-stimulating behaviour includes arm or hand-flapping,
                                         finger-flicking, rocking, jumping, spinning or twirling, humming, head-banging
                                         and complex body movements.
-                                        Almost always present in Autism, but we all do it; just to a lesser extent.
+                                        Almost always present in autism, but we all do it; just to a lesser extent.
                                     </p>
                                     <p class="center-content">
                                         <img class="img-reduce img-responsive" src="assets/images/stim.png"
@@ -414,8 +435,8 @@
                     <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Want to learn more?</h2>
                         <p class="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn
-                            about the various and oft quoted incorrect understanding and beliefs
-                            about Autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a>
+                            about the various and oft quoted, incorrect understanding and beliefs
+                            about autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a>
                         </p>
                         <br>
                     </div>
