--- a/myth.html
+++ b/myth.html
@@ -92,7 +92,7 @@
                                 Seek out time alone when overloaded by other people.
                             </li>
                             <li>
-                                Not seek comfort from other people(even though they may crave it)
+                                Not seek comfort from other people(even though they may crave it).
                             </li>
                             <li>
                                 Appear to behave strangely; or in a way thought to be socially inappropriate.
@@ -109,7 +109,7 @@
                                 Repetitive and restrictive behaviour.
                             </li>
                             <li>
-                                Over- or under-sensitivity to light, sound, taste or touch.
+                                Over or under-sensitivity to light, sound, taste or touch.
                             </li>
                             <li>
                                 Highly focused interests or hobbies.
@@ -140,7 +140,7 @@
                                 Wear the same clothes.
                             </li>
                             <li>
-                                Eat exactly the same food for breakfast, or lunch or dinner...
+                                Eat exactly the same food for breakfast, or lunch or dinner.
                             </li>
                         </ul>
                         <p class="center-content">
@@ -167,7 +167,7 @@
                                     </div>
                                     <div class="myth-card-back">
                                         <h2>Myth!</h2>
-                                        <p class="myth-card-text">Autism is not a disease and Autistic people are not
+                                        <p class="myth-card-text">Autism is not a disease and autistic people are not
                                             ill.
                                             It is a neuro-developmental disorder that can manifest itself in
                                             communication impairment or difficulty
@@ -196,7 +196,7 @@
                                         <p class="myth-card-text">
                                             Autism is a neurological condition and as such, the brain is wired
                                             differently. It's probably been like
-                                            that since before birth but we're not sure as its impossible to diagnose
+                                            that since before birth but we're not sure as it's impossible to diagnose
                                             earlier than 2 or 3 but it does show up on brain scans.
                                             <p class="myth-card-text">
                                                 There are many snake oil salesmen who peddle various therapies and diets
@@ -235,7 +235,7 @@
                                         </p>
                                         <p class="myth-card-text">
                                             The Doctor behind the study was subsequently stripped of his medical
-                                            license.
+                                            licence.
                                         </p>
                                     </div>
                                 </div>
@@ -294,7 +294,7 @@
                                         </p>
                                         <p class="myth-card-text">
                                             With often specific and focused interest in a topic,
-                                            sometimes to the exclusion of all else. They become expert on the specific
+                                            sometimes to the exclusion of all else. They become expert on the particular
                                             subject.
                                         </p>
                                     </div>
@@ -321,7 +321,7 @@
                                         </p>
                                         <p class="myth-card-text">
                                             We also struggle with interpreting other people’s emotions, body language &
-                                            expressions, and social nuances
+                                            expressions, and social nuances.
                                         </p>
                                     </div>
                                 </div>
@@ -469,10 +469,10 @@
                         <p>
                             It's obviously well meaning but about the worst thing you can say as it underlines in thick
                             lines and bold capitals
-                            that you just don't get the nature of Autism and how it affects those with it.
+                            that you just don't get the nature of autism and how it affects those with it.
                         </p>
                         <p>
-                            Your brain is either wired broadly similarly to everyone else or it isnt. Or it may be
+                            Your brain is either wired broadly similarly to everyone else or it isn't. Or it may be
                             broadly similarly
                             wired to another group of the human race. If the number of those people is significantly
                             numerically smaller then it's the exception.
