--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <div class="col-12">
                     <div>
                         <h1 class="title">Contact & Feedback<span>
-                                <a href="index.html"><img class="logo-img" src="assets/images/heart_logo.png"
+                                <a href="index.html"><img class="logo-img" src="assets/images/aut_aware_mod.png"
                                         alt="Autism heart Logo"
                                         aria-label="Multicoloured heart image with autism awareness caption."></a></span>
                         </h1>
@@ -68,7 +68,7 @@
                     <div class="col-xl-3">
                     </div>
                     <div class="col-xl-6">
-                        <h2 class="sub-title">Leave Feedback or ask a question</h2>
+                        <h2 class="sub-title">Leave Feedback Or Ask A Question</h2>
                     </div>
                 </div>
             </div>
