--- a/quiz.html
+++ b/quiz.html
@@ -60,7 +60,7 @@
                     <div class="col-md-2 col-sm-1 col-xl-3">
                     </div>
                     <div class="col-md-8 col-sm-10 col-xl-6">
-                        <h2 class="sub-title">Test Your Knowledge with the Quiz</h2>
+                        <h2 class="sub-title">Test Your Knowledge With The Quiz</h2>
                         <button class="btn btn-block btn-icon  btn-shadow" data-target="#quizInstructions" type="button"
                             aria-expanded="false">
                             Instructions</button>
