Fix: margin on social links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 It's impossible to estimate how many undiagnosed people there are but it's clearly
                                 substantial as there are many cases of diagnoses later in life.
                             </p>
-                            <ul>
+                            <ul class="home">
                                 <li>
                                     The country with the highest rate of diagnosed autism in the world is Qatar.
                                 </li>
