--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                     28% of autistics are left-handed. This figure is 10% in the general population.
                                 </li>
                                 <li>
-                                    The percentage of left-handed people in a population is roughly the same all over the world.
+                                    The percentage of left-handed people in a population is roughly 10-13% in every counry in the world.
                                 </li>
                             </ul>
                             <p>
