fix: apply consistency to text capitalisation

--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                                 <h2 class="modal-text">You could try this form again or email me
                                     <a href="mailto:webdev1961@gmail.com">HERE</a></h2>
                                 <h2 class="modal-text">
-                                    or if that doesn't work directly at webdev1961@gmail.com.</h2>
+                                    or if that doesn't work, directly at webdev1961@gmail.com.</h2>
                                 <br>
                                 <br>
                                 <div class=" center-content">
