--- a/index.html
+++ b/index.html
@@ -139,23 +139,18 @@
                                 The Autistic Spectrum</button>
                             <div class="content-hidden" id="autism1">
                                 <p>
-                                    Autism is a spectrum condition and affects people in different ways. Like all
-                                    people, autistic people have their own strengths and weaknesses.
-                                    The definition of autism has changed over time and continues to change.
+                                    It has been more than 50 years since <a
+                                        href="https://en.wikipedia.org/wiki/Leo_Kanner">Leo Kanner</a> first
+                                    described his classic autistic syndrome.
+                                    Since then, the results of research and clinical work have helped us learn more
+                                    about autism.
+                                    Regardless of this recent naming of the condition, its clear that autism has
+                                    been with us for millenia...
                                 </p>
                                 <p class="center-content">
                                     <img class="img-reduce img-responsive" src="assets/images/aut.jpg"
                                         alt="asd spectrum"
                                         aria-label="autism spectrum disorder spectrum rainbow with categories.">
-                                    <p>
-                                        It has been more than 50 years since <a
-                                            href="https://en.wikipedia.org/wiki/Leo_Kanner">Leo Kanner</a> first
-                                        described his classic autistic syndrome.
-                                        Since then, the results of research and clinical work have helped us learn more
-                                        about autism.
-                                        Regardless of this recent naming of the condition, its clear that autism has
-                                        been with us for millenia...
-                                    </p>
                                     <p>
                                         More and more people are being diagnosed as autistic,
                                         although we still have a long way to go in creating a world that works for
@@ -202,7 +197,7 @@
                                 <div>
                                     <p>
                                         There is a big pile of confusion over Asperger’s,
-                                        Autism and functioning labels (high and low) that causes many difficulties for
+                                        Autism and functioning labels (high and low) that cause many difficulties for
                                         parents.
                                     </p>
                                     <p>
