--- a/myth.html
+++ b/myth.html
@@ -163,7 +163,7 @@
                                 <div class="myth-card-inner">
                                     <div class="myth-card-front">
                                         <br>
-                                        <h2 class="bigger-font">Autism is a disease</h2>
+                                        <h2 class="bigger-font">Autism is a Disease</h2>
                                     </div>
                                     <div class="myth-card-back">
                                         <h2>Myth!</h2>
@@ -188,7 +188,7 @@
                                 <div class="myth-card-inner">
                                     <div class="myth-card-front">
                                         <br>
-                                        <h2 class="bigger-font">Autism has a cure</h2>
+                                        <h2 class="bigger-font">Autism has a Cure</h2>
                                         <br>
                                     </div>
                                     <div class="myth-card-back">
@@ -368,7 +368,7 @@
                                 <div class="myth-card-inner">
                                     <div class="myth-card-front">
                                         <br>
-                                        <h2 class="bigger-font">They'll Grow out of it</h2>
+                                        <h2 class="bigger-font">They'll Grow Out of It</h2>
 
                                     </div>
                                     <div class="myth-card-back">
@@ -432,7 +432,7 @@
                                     </div>
                                     <div class="myth-card-back">
                                         <h2>Myth!</h2>
-                                        <p class="myth-card-text">Way back in the 50s,there was a theory "the
+                                        <p class="myth-card-text">Way back in the 50s,there was a theory "The
                                             Refrigerator Mother Hypothesis".
                                             This theory suggested that mothers who were not warm emotionally and could
                                             be neglectful or
@@ -481,7 +481,7 @@
                             Of course with so much under diagnosis, late diagnosis and masking, the true number of those
                             "on the spectrum" is difficult to assess
                             but if it's much larger than currently thought then it could be less statistically "not
-                            usual" and more just differently normal.
+                            usual" and more just "differently normal".
                         </p>
                         <p>
                             Why not head over to the <a href="quiz.html">quiz page</a> and see how you get on.
