fix:correct capitalisation of titles on quiz

--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
                     </div>
                     <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Want to learn more?</h2>
-                        <p class="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn
-                            about the various and oft quoted, incorrect understanding and beliefs
+                        <p class="text-blue">Head on to the next page <a href="myth.html">'Myths or Fact'</a> to learn
+                            about the various and oft quoted, incorrect understandings and beliefs
                             about autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a>
                         </p>
                         <br>
