--- a/myth.html
+++ b/myth.html
@@ -484,7 +484,7 @@
                             usual" and more just "differently normal".
                         </p>
                         <p>
-                            Why not head over to the <a href="quiz.html">quiz page</a> and see how you get on.
+                            Why not head over to <a href="quiz.html">The Quiz Page</a> and see how you get on.
                         </p>
                         <br>
                     </div>
