--- a/404.html
+++ b/404.html
@@ -2,22 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="All About Autism website" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="All About Autism website">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
-    <!-- third party css to allow half columns -->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/hoomanbahreini/bootstrap-half-and-quarter-grid/fractional-grid.css"
-        type="text/css" />
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
-        type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+        type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <title>All About Autism</title>
 </head>
 
@@ -32,7 +28,7 @@
                                 Oops..... Page Not Found<span>
                                     <a href="index.html"><img class="logo-img" src="assets/images/jigsaw_piece.png"
                                             alt="Autism Jigsaw Logo"
-                                            aria-label="Multicoloured Jigsaw piece." /></a></span>
+                                            aria-label="Multicoloured Jigsaw piece."></a></span>
                             </h1>
                         </div>
                     </div>
@@ -61,18 +57,18 @@
                 <div class="row no-gutters">
                     <div class="col-md-2 col-sm-1 col-xl-3"></div>
                     <div class="col-md-8 col-sm-10 col-xl-6 text-center section-details solid-border contact-color">
-                        <br />
+                        <br>
                         <h2 class="font-weight-bold">Sorry, looks like</h2>
                         <h2 class="font-weight-bold">that page can't be found</h2>
-                        <br />
-                        <br />
+                        <br>
+                        <br>
                         <h2 class="font-weight-bold">
                             Use the Menu above to go to the page you want,
                         </h2>
                         <h2 class="font-weight-bold">or the Heart below to go Home.</h2>
                         <p class="mt-5 pt-5">
                             <a href="index.html"><img class="logo-img" src="assets/images/broken_rainbow.png"
-                                    alt="boken heart Logo" aria-label="Multicoloured heart broken in two." /></a>
+                                    alt="boken heart Logo" aria-label="Multicoloured heart broken in two."></a>
                         </p>
                     </div>
                 </div>
