fix: apply margin changes to quiz box

--- a/myth.html
+++ b/myth.html
@@ -63,7 +63,7 @@
                             Here is a list of difficulties autistic people may share, including the two key difficulties
                             <strong>(<span style="color:#93102d">below</span>)</strong> required for a diagnosis:
                         </p>
-                        <p class="indent-para purple-text">
+                        <p class="purple-text">
                             <strong>Social communication:</strong>
                         </p>
                         <ul class="myth">
@@ -77,7 +77,7 @@
                                 Repeating what others say to them (this is called echolalia).
                             </li>
                         </ul>
-                        <p class="indent-para purple-text">
+                        <p class="purple-text">
                             <strong>Social interaction:</strong>
                         </p>
                         <ul class="myth">
@@ -97,7 +97,7 @@
                                 Find it hard to form friendships (when again, they may crave this).
                             </li>
                         </ul>
-                        <p class="indent-para">
+                        <p>
                             <strong>Other Key Difficluties:</strong>
                         </p>
                         <ul class="myth">
