--- a/quiz.html
+++ b/quiz.html
@@ -92,7 +92,7 @@
                         <h2 id="question-time-counter" class="text-end">Time left:</h2>
                         <br>
                         <h2 class="text-left">The Great</h2>
-                        <img class="img img-responsive" alt="Autism logo" aria-label="the word Autism in multicolor"
+                        <img class="text-center quiz-img img-responsive" alt="Autism logo" aria-label="the word Autism in multicolor"
                             src="assets/images/autism-mod.png">
                         <h2>Quiz</h2>
                         <div class="myquiz">
