fix: apply padding changes to quiz box

--- a/quiz.html
+++ b/quiz.html
@@ -90,23 +90,19 @@
                 <div class="row no-gutters section-details">
                     <div class="quizmain">
                         <h2 id="question-time-counter" class="text-end">Time left:</h2>
-                        <br>
                         <h2 class="text-left">The Great</h2>
-                        <img class="text-center quiz-img img-responsive" alt="Autism logo" aria-label="the word Autism in multicolor"
+                        <img class="text-center quiz-img img-responsive pb-n2" alt="Autism logo" aria-label="the word Autism in multicolor"
                             src="assets/images/autism-mod.png">
                         <h2>Quiz</h2>
                         <div class="myquiz">
-                            <h2 id="question-number" class="text-center">question number placeholder text</h2>
-                            <br>
-                            <h3 id="question" class="text-center fs-1">question placeholder text</h3>
-                            <br>
+                            <h2 id="question-number" class="text-center pb-1">question number placeholder text</h2>
+                            <h3 id="question" class="text-center pb-1 fs-1">question placeholder text</h3>
                             <div id="answer-btns">
                                 <button class="quizBtn">placeholder answer 1</button>
                                 <button class="quizBtn">placeholder answer 2</button>
                                 <button class="quizBtn">placeholder answer 3</button>
                                 <button class="quizBtn">placeholder answer 4</button>
                             </div>
-                            <br>
                             <button id="next-btn" class="btn-shadow">Next</button>
                         </div>
                     </div>
