fix: apply margin changes to myths

--- a/myth.html
+++ b/myth.html
@@ -153,7 +153,7 @@
                 <div class="row no-gutters section-details">
                     <div class="col-lg-1 col-md-1 col-xl-2 col-sm-3">
                     </div>
-                    <div class="col-md-5 col-xl-4">
+                    <div class="col-md-5 col-lg-5 col-xl-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
@@ -178,7 +178,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5 col-xl-4">
+                    <div class="col-md-5 col-lg-5 col-xl-4">
                         <div class="row">
                             <div class="myth-card">
                                 <div class="myth-card-inner">
